all basic functionalities are added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <section class="input-section">
             <input type="" class="prompt" id="prompt" value="0" readonly>
-            <input type="number" class="answer" id="answer" value="01" readonly>
+            <input type="number" class="answer" id="answer" value="" readonly placeholder="answer">
         </section>
 
         <section class="keyboard">
